rambo/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rambo
  name: rambo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rambo
  template:
    metadata:
      labels:
        app: rambo
    spec:
      containers:
      - image: bletvaska/rambo
        name: rambo
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: homepage

      volumes:
      - name: www
        emptyDir: {}
      - name: homepage
        hostPath:
          path: /tmp/www
          type: DirectoryOrCreate

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: rambo
  name: rambo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: rambo
