rambo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rambo
  namespace: wordpress
spec:
  rules:
  - http:
      paths:
      - path: /rambo/1
        pathType: Prefix
        backend:
          service:
            name: rambo-1
            port:
              number: 80

      - path: /rambo/2
        pathType: Prefix
        backend:
          service:
            name: rambo-2
            port:
              number: 80

      - path: /rambo/3
        pathType: Prefix
        backend:
          service:
            name: rambo-3
            port:
              number: 80
